# hmi_robin

assistant_robin/: CMakeLists.txt  package.xml
assistant_robin/launch/: assistant.launch
assistant_robin/scripts/: assistant_server.py
command_matcher/: CMakeLists.txt  package.xml
command_matcher/launch/: command.launch
command_matcher/src/: Dictionary.cpp  command_matcher.cpp
gspeech/: CMakeLists.txt  package.xml  src
hmi_robin/: CMakeLists.txt  package.xml
speech_database/: CMakeLists.txt  package.xml
speech_database/launch/: speech.launch
speech_database/src/: speech_database.cpp  speed_database.cpp
