<?xml version="1.0"?>
<package>
  <name>assistant_robin</name>
  <version>0.0.1</version>
  <description>ROS interface to the Google Assistant</description>

  <maintainer email="alexander.reiter@jku.at">Alexander Reiter</maintainer>

  <license>Apache License Version 2.0</license>

   <url type="website">http://wiki.ros.org/assistant_robin</url> 

   <author email="alexander.reiter@jku.at">Alexander Reiter</author> 


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend> 
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
     <run_depend>message_runtime</run_depend> 
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
