<?xml version="1.0"?>
<package>
  <name>command_matcher</name>
  <version>0.6.0</version>
  <description>The command_matcher package</description>
  
  <author email="alexander.reiter@jku.at">Alexander Reiter</author>
  <maintainer email="alexander.reiter@jku.at">Alexander Reiter</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libjansson-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
