<?xml version="1.0"?>
<package>
  <name>gspeech</name>
  <version>0.5.0</version>
  <description>Package for speech recognition using Google's Speech API</description>
  <url>http://wiki.ros.org/gspeech</url>
  
  <author email="achu@achuwilson.in">achuwilsonGEC Sreekrishnapuram+91-9400418468</author>
  <maintainer email="achu@achuwilson.in">achuwilsonGEC Sreekrishnapuram+91-9400418468</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
