<package>
  <name>hmi_robin</name>
  <version>1.0.0</version>
  <description>This is the hmi_robin meta-package</description>

  <maintainer email="alexander.reiter@me.com">Alexander Reiter</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hmi_robin</url>

  <author email="alexander.reiter@me.com">Alexander Reiter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>speech_database</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
