<?xml version="1.0"?>
<package>
  <name>speech_database</name>
  <version>0.9.0</version>
  <description>
	  The speech_database package performs text-to-speech conversion by using Google's speech synthesiser. 
	  It also provides a storage solution for synthesised speech.
	  Speech can be accessed by publishing a text string at the /speech topic. If no entry exists, the text will by synthesised and stored locally in an mp3 file. 
	  After an entry that corresponds to the text was found or created, a request to play the audio file is published at the /robotsound topic to be processed by the soundplay_node.py of the sound_play package.
  </description>

  <maintainer email="alexander.reiter@jku.at">Alexander Reiter</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/speech_database</url>

  <author email="alexander.reiter@jku.at">Alexander Reiter</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>libcurl4-openssl-dev</build_depend>
  <build_depend>libjansson-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  
</package>
